# Golf-Club-Performance

./: .env.example  .gitignore  README.md  golf_club_performance_by_club_2025.py  pyproject.toml  requirements.txt
api/: auth.py  db.py  main.py  schema.sql
api/routers/: admin.py  analytics.py  auth.py  sessions.py
app/: _legacy_club_performance_dashboard_streamlit.py  streamlit_app.py
src/golf_analytics/: __init__.py  api_client.py  utils.py
src/golf_analytics/app/: streamlit_app.py
src/golf_analytics/cleaning/: normalize.py
src/golf_analytics/io/: loaders.py  raw_sessions.py
src/golf_analytics/metrics/: deliverables.py  notebook_metrics.py  summary.py
src/golf_analytics/viz/: charts.py  notebook_charts.py
tests/: test_loaders.py
